# Claude-DeepSeek-Configurator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-macos.yml  build-windows.yml  project-checks.yml  windows-smoke.yml
docs/: RELEASE.md  TROUBLESHOOTING.md
license-server/: README.md  package.json  schema.sql  wrangler.toml.example
license-server/src/: index.js
macos/: README.md  index.html  package-lock.json  package.json
macos/src/: App.tsx
macos/src-tauri/: Cargo.toml  tauri.conf.json
macos/src-tauri/icons/: icon.icns
macos/src-tauri/src/: main.rs
scripts/: check-version-consistency.mjs  windows-one-click-smoke.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
windows/: README.md  package-lock.json  package.json  vite.config.ts
windows/src/: App.tsx
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: main.rs
