[package]
name = "deepseek_claude_configurator"
version = "0.1.3"
description = "Claude Code + DeepSeek V4 Windows configurator"
authors = ["ytw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"
